lilv (9999) unstable;

  * Fix Lilv::Instance API to handle features and failed instantiations
  * Deprecate old flawed Lilv::Instance constructors
  * Add Lilv::Instance::get_handle() and Lilv::Instance::get_extension_data()
  * Fix documentation for ui_type parameter of lilv_ui_is_supported()

 -- David Robillard <d@drobilla.net>

lilv (0.14.2) stable;

  * Fix dynmanifest support

 -- David Robillard <d@drobilla.net>  Thu, 19 Apr 2012 16:11:31 -0400

lilv (0.14.0) stable;

  * Add lilv_plugin_get_extension_data
  * Use path variables in pkgconfig files
  * Install man page to DATADIR (e.g. PREFIX/share/man, not PREFIX/man)
  * Make Lilv::uri_to_path static inline (fix linking errors)
  * Use correct URI for dcterms:replaces (for hiding old plugins):
    "http://purl.org/dc/terms/replaces"
  * Fix compilation on BSD
  * Only load dynmanifest libraries once per bundle, not once per plugin
  * Fix lilv_world_find_nodes to work with wildcard subjects
  * Add lilv_plugin_get_related to get resources related to plugins that
    are not directly rdfs:seeAlso linked (e.g. presets)
  * Add lilv_world_load_resource for related resources (e.g. presets)
  * Print presets in lv2info
  * Remove locale smashing kludges and use new serd functions for converting
    nodes to/from numbers.
  * Add LilvState API for handling plugin state.  This makes it simple to
    save and restore plugin state both in memory and on disk, as well as
    save presets in a host-sharable way since the disk format is identical
    to the LV2 presets format.
  * Update old references to lv2_list (now lv2ls)
  * Support compilation as C++ under MSVC++.
  * Remove use of wordexp.
  * Add lilv_plugin_get_port_by_designation() and lilv_port_get_index() as an
    improved generic alternative to lilv_plugin_get_latency_port_index().
  * Add lilv_plugin_get_project() and get author information from project if
    it is not given directly on the plugin.
